Fix text overflow for First name on Account page
[Finishes #55566540]

--- a/app/assets/stylesheets/app/account.css.scss
+++ b/app/assets/stylesheets/app/account.css.scss
@@ -5,13 +5,13 @@
   color:$slate;
 
   h1 {
-  	font-size: 2.9em;
-  	font-weight:900;
+    font-size: 2.9em;
+    font-weight:900;
     margin-bottom:5px;
 
-  	&.cyan {
-  	  color: $cyan;
-  	}
+    &.cyan {
+      color: $cyan;
+    }
 
     &.chart {
       color: $chart;
@@ -23,65 +23,67 @@
   }
 
   h2 {
-  	font-size: 1.4em;
-  	font-weight:500;
-  	line-height:1.1em;
+    font-size: 1.4em;
+    font-weight:500;
+    line-height:1.1em;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
-  	&.cyan {
-  		color:$cyan;
-  		font-weight:700;
-  	}
+    &.cyan {
+      color:$cyan;
+      font-weight:700;
+    }
 
-  	&.white {
-  		color:#FFFFFF;
-  		letter-spacing:2px;
-  		font-weight:300;
-  	}
+    &.white {
+      color:#FFFFFF;
+      letter-spacing:2px;
+      font-weight:300;
+    }
 
-  	&.bold {
+    &.bold {
       font-size:1.6em;
-  		font-weight:700;
+      font-weight:700;
       text-transform: uppercase;
-  	}
+    }
   }
 
   h3 {
-  	font-size:1em;
-  	font-weight:100;
-  	letter-spacing: 1px;
+    font-size:1em;
+    font-weight:100;
+    letter-spacing: 1px;
 
-  	&.bold {
-  		font-weight:300;
-  	}
+    &.bold {
+      font-weight:300;
+    }
 
     &.account-status{
       display:inline;
     }
 
-  	&.green {
-  	  color:$green;
+    &.green {
+      color:$green;
       font-weight:500;
-  		/*margin-top:13px;*/
-  	}
+      /*margin-top:13px;*/
+    }
 
-  	&.cyan {
-  		color:$cyan;
+    &.cyan {
+      color:$cyan;
       font-weight:500;
-  	}
+    }
 
-  	&.chart {
-  		color:$chart;
+    &.chart {
+      color:$chart;
       font-weight:500;
-  	}
+    }
 
-  	&.pink {
-  		color:$pink;
+    &.pink {
+      color:$pink;
       font-weight:500;
-  	}
+    }
   }
 
   h4 {
-  	color:#808080;
+    color:#808080;
     font-size:.8em;
     font-weight:100;
     letter-spacing: 1px;
